just button size decrease

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -91,7 +91,7 @@
                 <div class="col-lg-6">
                     <div class="login_box_img">
                         <img class="img-fluid" src="img/login.jpg" alt="img">
-                        <div  class="row hover flex-column align-content-center justify-content-center">
+                        <div  class="hover flex-column align-content-center justify-content-center">
                             <button style="font-size: 1.2rem;
                             padding: 18px 15px;
                             border-radius: 27px;
