fix bug in admin side

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -97,7 +97,7 @@
                             border-radius: 27px;
                             border: none;
                             background-image: linear-gradient(90deg, #ffba00 0%, #ff6c00 100%) !important;
-                            outline: none;"><a href="/signup" style="color:#ffff;">Create an Account</a></button>
+                            outline: none;"><a href="/signup" style="color:#ffff; text-decoration: none;">Create an Account</a></button>
                         </div>
                     </div>
                 </div>
