--- a/views/user/checkOutDetails.ejs
+++ b/views/user/checkOutDetails.ejs
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
      <!--  -->
+     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 <body>
   
@@ -74,9 +76,7 @@
                         <div>
                             <!-- cancel disabled js -->
                             <% if (checkout.orderStatus === "Processing") { %>
-                               <a href="/cancelOrder/<%=encodeURIComponent(checkout._id) %>">
-                                <button class="btn btn-danger px-5">Cancel</button>
-                               </a>
+                                <button class="btn btn-danger px-5" onclick="confirmCancel('<%= checkout._id %>')">Cancel</button>
                             <% } %>
                             
                            
@@ -89,6 +89,24 @@
        </div>
    </div>
 
+
+   <script>
+    function confirmCancel(orderId) {
+        Swal.fire({
+            title: 'Are you sure?',
+            text: "You won't be able to revert this!",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, cancel it!'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                window.location.href = `/cancelOrder/${encodeURIComponent(orderId)}`;
+            }
+        })
+    }
+</script>
    
    
 </body>
