--- a/views/admin/notification.ejs
+++ b/views/admin/notification.ejs
@@ -81,12 +81,10 @@
                 <li class="nav-item">
                     <a class="nav-link in-active" href="/admin/userList"><i class="fas fa-users"></i> Users</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link in-active" href="/admin/orderList"><i class="fas fa-list"></i> Order list</a>
-                </li>
-                <li class="nav-item">
+              
+                <!-- <li class="nav-item">
                     <a class="nav-link in-active" href="/admin/paymentMethods"><i class="fas fa-credit-card"></i> Payment</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link in-active" href="/admin/salesReport"><i class="fas fa-chart-bar"></i> Report</a>
                 </li>
@@ -94,14 +92,17 @@
                     <a class="nav-link in-active" href="/admin/categories"><i class="fas fa-folder"></i> Category</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link in-active" href="/admin/orderStatus"><i class="fas fa-truck"></i> Orders Status</a>
+                    <a class="nav-link in-active" href="/admin/products"><i class="fas fa-folder"></i>
+                        Product Management</a>
+                </li>
+                
+                <li class="nav-item">
+                    <a class="nav-link in-active" href="/admin/orders"><i class="fas fa-truck"></i> Orders Management</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link in-active" href="/admin/transactionHistory"><i class="fas fa-history"></i> Transaction history</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link in-active" href="/admin/addProducts"><i class="bi bi-bag-plus-fill"></i> Add mens product</a>
-                </li>
+               
                 
                 <li class="nav-item">
                     <a class="nav-link in-active" href="/admin/couponsHistory"><i class="fas fa-ticket-alt"></i> Coupons history</a>
