--- a/views/user/orderHistory.ejs
+++ b/views/user/orderHistory.ejs
@@ -153,7 +153,7 @@
 						<p class="card-text">Discount: ₹0</p>
 						<p class="card-text"><b>Total: ₹ <%=details.cart?.totalAmount%></b> </p>
 						<p class="card-text"><b>Status :  <%=details.orderStatus%>  </b> </p>
-						<a href="/orderhistory/details/<%=encodeURIComponent(details._id)%>" class="btn btn-primary mt-2" style="padding: 0.500em 10em;">Invoice</a>
+						<a href="/orderhistory/details/<%=encodeURIComponent(details._id)%>" class="btn btn-primary mt-2" style="padding: 0.500em 10em;">Details</a>
 					  </div>
 				   </div>
 				  </div>
