--- a/views/admin/paymentMethods.ejs
+++ b/views/admin/paymentMethods.ejs
@@ -92,9 +92,7 @@
                         <li class="nav-item">
                             <a class="nav-link in-active" href="/admin/userList"><i class="fas fa-users"></i> Users</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link in-active" href="/admin/orderList"><i class="fas fa-list"></i> Order list</a>
-                        </li>
+                        
                         <li class="nav-item">
                             <a class="nav-link active" href="/admin/paymentMethods"><i class="fas fa-credit-card"></i> Payment</a>
                         </li>
@@ -105,14 +103,16 @@
                             <a class="nav-link in-active" href="/admin/categories"><i class="fas fa-folder"></i> Category</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link in-active" href="/admin/orderStatus"><i class="fas fa-truck"></i> Orders Status</a>
+                            <a class="nav-link in-active" href="/admin/products"><i class="fas fa-folder"></i>
+                                Product Management</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link in-active" href="/admin/orders"><i class="fas fa-truck"></i> Orders Management</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link in-active" href="/admin/transactionHistory"><i class="fas fa-history"></i> Transaction history</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link in-active" href="/admin/addProducts"><i class="bi bi-bag-plus-fill"></i> Add mens product</a>
-                        </li>
+                       
                        
                         <li class="nav-item">
                             <a class="nav-link in-active" href="/admin/couponsHistory"><i class="fas fa-ticket-alt"></i> Coupons history</a>
