--- a/views/errorPage/404Page.ejs
+++ b/views/errorPage/404Page.ejs
@@ -25,11 +25,12 @@
     .containerMod {
     height: 100vh;
     width: 100%;
-    background-color: #ff910043;
+   
 }
 
 body {
     font-family: sans-serif;
+    background-color: black;
 }
 
 .rowMod-1 {
@@ -37,21 +38,16 @@ body {
     width: 480px;
     height: 500px;  
     padding-top: 12px;
+    color: #ffff;
 }
 
 
 
 
 
-.rowMod-1> a > button {
-    outline: none;
-    border: none;
-    border-radius: 30px;
-    padding: 12px 0;
-    width: 275px;
-    margin-left: 17px;
-    background-color: #ff9000;
-    color: #fff;
+.rowMod-1> h2 {
+   
+    color: #ff9000;
 }
 
 
@@ -63,11 +59,12 @@ body {
     <!-- user signup page -->
     <div class="main">
         <div class="container-fluid  containerMod d-flex align-items-center justify-content-center">
-            <div class="row  rowMod-1">
+            <div class="row  rowMod-1  text-capitalize text-center">
                 <h1 style="text-align: center;font-size: 15rem;" class="mt-auto">
                     404
                 </h1>
-              <a href="/" class="mt-3 text-center"><button>Go To Home</button></a>
+             
+              <h2><%= message || 'Page Not Found !'%></h2>
             </div>
         </div>
     </div>
